Completed II.1, including creation of 42 json files containing scraped Bluesky posts.

--- a/Assignment 2/part2.ipynb
+++ b/Assignment 2/part2.ipynb
@@ -26,6 +26,226 @@
     "\n",
     "<iframe data-testid=\"embed-iframe\" style=\"border-radius:12px\" src=\"https://open.spotify.com/embed/track/3QaPy1KgI7nu9FJEQUgn6h?utm_source=generator\" width=\"40%\" height=\"152\" frameBorder=\"0\" allowfullscreen=\"\" allow=\"autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture\" loading=\"lazy\"></iframe>"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cf22c9dd",
+   "metadata": {},
+   "source": [
+    "#### II.1 | Data Collection\n",
+    "We are asked to collect replies to senator posts: at least 5 female senators and 5 male senators. For each, we:\n",
+    "\n",
+    "1. Fetch posts from last 7 days via `getAuthorFeed`\n",
+    "2. For posts with replies, fetch the reply thread via `getPostThread`\n",
+    "3. Extract replier handle, display name, timestap, and post reply count\n",
+    "4. Save the data in JSON format\n",
+    "\n",
+    "For completeness, we will collect replies for all senators (not just 5 for each gender). Given the duration our code will run, we provide period print statements to verify successful progression of data collection."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 27,
+   "id": "7b1a7ebd",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import time\n",
+    "import random\n",
+    "import bluesky_helpers as bsky\n",
+    "from datetime import datetime, timedelta, timezone"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "94c7b94c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def collect_senator_replies():\n",
+    "    \"\"\"\n",
+    "    Uses helper functions to collect reply thread data for all 42 senators\n",
+    "    (14 women and 28 men).\n",
+    "    \"\"\"\n",
+    "\n",
+    "    # Load senators from provided data file.\n",
+    "    senators = bsky.load_senators('data/senators_bluesky.csv')\n",
+    "    print(f\"Identified {len(senators)} senators.\")\n",
+    "\n",
+    "    # Define time window for step (1).\n",
+    "    cutoff_date = datetime.now(timezone.utc) - timedelta(days=7)\n",
+    "    print(f\"Setting post cutotoff window as: {cutoff_date.isoformat()}\\n\")\n",
+    "\n",
+    "    # Collect data; iterate over all senators.\n",
+    "    for i, senator in enumerate(senators, 1):\n",
+    "        \n",
+    "        handle = senator['handle']\n",
+    "\n",
+    "        ## Define dictionary structure.\n",
+    "        senator_data = {\n",
+    "            'meta': senator,\n",
+    "            'posts': []\n",
+    "        }\n",
+    "\n",
+    "        ## Fetch recent posts with a relatively high limit to cover full week.\n",
+    "        feed_response = bsky.get_author_feed(handle, limit = 100)\n",
+    "        time.sleep(0.2)\n",
+    "\n",
+    "        posts_collected = 0\n",
+    "\n",
+    "        ### Add robustness for if no feed data is found (e.g., 404 error).\n",
+    "        if not feed_response or 'feed' not in feed_response:\n",
+    "            continue\n",
+    "\n",
+    "        ### Add robustness for missing or incomplete posts (e.g., deleted).\n",
+    "        for item in feed_response['feed']:\n",
+    "            post = item.get('post')\n",
+    "            if not post: continue\n",
+    "\n",
+    "            record = post.get('record', {})\n",
+    "\n",
+    "            #### Checks for failure or missing key, then date and reply count.\n",
+    "            try:\n",
+    "                created_at = record.get('createdAt')\n",
+    "                post_date = bsky.parse_datetime(created_at)\n",
+    "            except (ValueError, TypeError):\n",
+    "                continue\n",
+    "            \n",
+    "            if post_date < cutoff_date:\n",
+    "                continue\n",
+    "\n",
+    "            reply_count = post.get('replyCount', 0)\n",
+    "            if reply_count == 0:\n",
+    "                continue\n",
+    "\n",
+    "            ### Fetch thread.\n",
+    "            uri = post['uri']\n",
+    "            time.sleep(0.2)   #### Ensures we remain below ~300 requests/min.\n",
+    "\n",
+    "            thread_data = bsky.get_post_thread(uri)\n",
+    "            captured_replies = []\n",
+    "\n",
+    "            if thread_data and 'thread' in thread_data:\n",
+    "                thread_root = thread_data['thread']\n",
+    "\n",
+    "                if 'replies' in thread_root:\n",
+    "                    for reply in thread_root['replies']:\n",
+    "                        if 'post' in reply:\n",
+    "                            reply_post = reply['post']\n",
+    "                            author = reply_post.get('author', {})\n",
+    "\n",
+    "                            captured_replies.append({\n",
+    "                                'handle': author.get('handle'),\n",
+    "                                'displayName': author.get('displayName'),\n",
+    "                                'did': author.get('did'),\n",
+    "                                'createdAt': reply_post.get('record', {}).get('createdAt'),\n",
+    "                                'uri': reply_post.get('uri'),\n",
+    "                                'text': reply_post.get('record', {}).get('text', '')\n",
+    "                            })\n",
+    "\n",
+    "            senator_data['posts'].append({\n",
+    "                'uri': uri,\n",
+    "                'text': record.get('text'),\n",
+    "                'createdAt': created_at,\n",
+    "                'totalReplyCount': reply_count,\n",
+    "                'capturedReplyCount': len(captured_replies), # We may miss some.\n",
+    "                'replies': captured_replies\n",
+    "            })\n",
+    "            \n",
+    "            posts_collected += 1\n",
+    "\n",
+    "            clean_handle = handle.replace('.', '_') # Prevent filename errrors.\n",
+    "            filename = f\"part2_data/replies_{clean_handle}.json\"\n",
+    "            bsky.save_json(senator_data, filename)\n",
+    "        \n",
+    "        print(f\"Saved {filename}.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "935bd97d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Identified 42 senators.\n",
+      "Setting post cutotoff window as: 2026-01-31T20:45:00.001419+00:00\n",
+      "\n",
+      "Saved part2_data/replies_baldwin_senate_gov.json.\n",
+      "Saved part2_data/replies_murray_senate_gov.json.\n",
+      "Saved part2_data/replies_cantwell_senate_gov.json.\n",
+      "Saved part2_data/replies_markwarner_bsky_social.json.\n",
+      "Saved part2_data/replies_kaine_senate_gov.json.\n",
+      "Saved part2_data/replies_sanders_senate_gov.json.\n",
+      "Saved part2_data/replies_whitehouse_senate_gov.json.\n",
+      "Saved part2_data/replies_reed_senate_gov.json.\n",
+      "Saved part2_data/replies_reed_senate_gov.json.\n",
+      "Saved part2_data/replies_wyden_senate_gov.json.\n",
+      "Saved part2_data/replies_jeff-merkley_bsky_social.json.\n",
+      "Saved part2_data/replies_schumer_senate_gov.json.\n",
+      "Saved part2_data/replies_kirstengillibrand_bsky_social.json.\n",
+      "Saved part2_data/replies_lujan_senate_gov.json.\n",
+      "Saved part2_data/replies_heinrich_senate_gov.json.\n",
+      "Saved part2_data/replies_kim_senate_gov.json.\n",
+      "Saved part2_data/replies_booker_senate_gov.json.\n",
+      "Saved part2_data/replies_shaheen_senate_gov.json.\n",
+      "Saved part2_data/replies_hassan_senate_gov.json.\n",
+      "Saved part2_data/replies_smith_senate_gov.json.\n",
+      "Saved part2_data/replies_klobuchar_senate_gov.json.\n",
+      "Saved part2_data/replies_slotkin_senate_gov.json.\n",
+      "Saved part2_data/replies_peters_senate_gov.json.\n",
+      "Saved part2_data/replies_warren_senate_gov.json.\n",
+      "Saved part2_data/replies_markey_senate_gov.json.\n",
+      "Saved part2_data/replies_vanhollen_senate_gov.json.\n",
+      "Saved part2_data/replies_alsobrooks_senate_gov.json.\n",
+      "Saved part2_data/replies_durbin_senate_gov.json.\n",
+      "Saved part2_data/replies_duckworth_senate_gov.json.\n",
+      "Saved part2_data/replies_duckworth_senate_gov.json.\n",
+      "Saved part2_data/replies_hirono_senate_gov.json.\n",
+      "Saved part2_data/replies_warnock_senate_gov.json.\n",
+      "Saved part2_data/replies_ossoff_bsky_social.json.\n",
+      "Saved part2_data/replies_coons_senate_gov.json.\n",
+      "Saved part2_data/replies_bluntrochester_senate_gov.json.\n",
+      "Saved part2_data/replies_chrismurphyct_bsky_social.json.\n",
+      "Saved part2_data/replies_blumenthal_senate_gov.json.\n",
+      "Saved part2_data/replies_bennet_senate_gov.json.\n",
+      "Saved part2_data/replies_schiff_senate_gov.json.\n",
+      "Saved part2_data/replies_schiff_senate_gov.json.\n",
+      "Saved part2_data/replies_captmarkkelly_bsky_social.json.\n",
+      "Saved part2_data/replies_gallego_senate_gov.json.\n",
+      "Complete!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Execute collect_senator_replies().\n",
+    "try:\n",
+    "    collect_senator_replies()\n",
+    "    print(\"Complete!\")\n",
+    "\n",
+    "except KeyboardInterrupt:\n",
+    "    print(\"Aborted. Partial data saved, if applicable.\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "605a93db",
+   "metadata": {},
+   "source": [
+    "### II.2 | Gender Influence\n",
+    "With our full data collected in II.2, we will infer the gender of repliers from\n",
+    "their display names using SSA baby name data. Specifically, we will:\n",
+    "\n",
+    "1. Extract a likely first name from each display name\n",
+    "2. Look up the name's historical gender distribution\n",
+    "3. Classify as female if >60% of registrations are female and male if >60% are male; otherwise unknown\n",
+    "\n",
+    "We will report which fraction of repliers are classifiable"
+   ]
   }
  ],
  "metadata": {
