Completed implementation for II.2.

--- a/Assignment 2/part2.ipynb
+++ b/Assignment 2/part2.ipynb
@@ -58,7 +58,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "94c7b94c",
    "metadata": {},
    "outputs": [],
@@ -66,7 +66,7 @@
     "def collect_senator_replies():\n",
     "    \"\"\"\n",
     "    Uses helper functions to collect reply thread data for all 42 senators\n",
-    "    (14 women and 28 men).\n",
+    "    (14 women and 28 men). Expected to take 5 minutes with built-in sleep.\n",
     "    \"\"\"\n",
     "\n",
     "    # Load senators from provided data file.\n",
@@ -244,7 +244,278 @@
     "2. Look up the name's historical gender distribution\n",
     "3. Classify as female if >60% of registrations are female and male if >60% are male; otherwise unknown\n",
     "\n",
-    "We will report which fraction of repliers are classifiable"
+    "We will report which fraction of repliers are classifiable."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "363cbbd0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import re\n",
+    "import os"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "a637f14f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def load_ssa_data():\n",
+    "    \"\"\"\n",
+    "    Takes `female_names.tsv` and `male_names.tsv` and creates a dictionary\n",
+    "    `gender_map` as output.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Load data.\n",
+    "    f_df = pd.read_csv(\n",
+    "        'data/female_names.tsv',\n",
+    "        sep = '\\t',\n",
+    "        header = 0,\n",
+    "        names = ['name', 'count', 'year'])\n",
+    "\n",
+    "    m_df = pd.read_csv(\n",
+    "        'data/male_names.tsv',\n",
+    "        sep = '\\t',\n",
+    "        header = 0,\n",
+    "        names = ['name', 'count', 'year'])\n",
+    "\n",
+    "    print(\"Files loaded successfully.\")\n",
+    "\n",
+    "    # Group by name and sum counts (e.g., there may be Mary 1950 and Mary 1951).\n",
+    "    f_sums = f_df.groupby('name')['count'].sum()\n",
+    "    m_sums = m_df.groupby('name')['count'].sum()\n",
+    "\n",
+    "    # Create dictionary.\n",
+    "    name_dict = set(f_sums.index).union(set(m_sums.index))\n",
+    "    gender_map = {}\n",
+    "\n",
+    "    for name in name_dict:\n",
+    "        f_count = f_sums.get(name, 0)\n",
+    "        m_count = m_sums.get(name, 0)\n",
+    "        total = f_count + m_count\n",
+    "\n",
+    "        gender_map[name.lower()] = {\n",
+    "            'pct_female': f_count / total,\n",
+    "            'total_count': total\n",
+    "        }\n",
+    "\n",
+    "    return gender_map"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "id": "dc61b0b8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Files loaded successfully.\n"
+     ]
+    }
+   ],
+   "source": [
+    "gender_db = load_ssa_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "id": "1718c538",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def infer_gender(display_name):\n",
+    "    \"\"\"\n",
+    "    Takes a Bluesky handle and predicts binary gender based on SSA data.\n",
+    "    \"\"\"\n",
+    "    \n",
+    "    # Clean the handle (e.g., numbers, punctuation, emojis)\n",
+    "    clean = re.sub(r'[^a-zA-Z/s/-]', '', display_name).strip()\n",
+    "\n",
+    "    tokens = clean.split()\n",
+    "\n",
+    "    if not tokens:\n",
+    "        return \"Unknown\", None\n",
+    "\n",
+    "    first_token = tokens[0]\n",
+    "\n",
+    "    # Handle conjoined names (e.g., MarySmith -> Mary).ArithmeticError\n",
+    "    conjoined = re.match(r'([A-Z][a-z]+)(?=[A-Z])', first_token)\n",
+    "\n",
+    "    if conjoined:\n",
+    "        likely_name = conjoined.group(1)\n",
+    "    else:\n",
+    "        likely_name = first_token\n",
+    "\n",
+    "    # Compare against SSA name database.\n",
+    "    stats = gender_db.get(likely_name.lower())\n",
+    "\n",
+    "    if stats:\n",
+    "\n",
+    "        if stats['pct_female'] > 0.60:\n",
+    "            return \"Female\", likely_name\n",
+    "\n",
+    "        elif stats['pct_female'] < 0.40:\n",
+    "            return \"Male\", likely_name\n",
+    "\n",
+    "    return \"Unknown\", likely_name"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6626e076",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import json\n",
+    "import glob\n",
+    "import pandas as pd\n",
+    "from datetime import datetime"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "id": "c9aacac6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def process_gender_data():\n",
+    "    \"\"\"\n",
+    "    Iterates through our collected JSON files and infers gender for repliers.\n",
+    "    Outputs a dataframe containing every single classifiable reply as a row in\n",
+    "    anticipation of II.3 and II.4.\n",
+    "    \"\"\"\n",
+    "\n",
+    "    all_replies = []\n",
+    "    files = glob.glob('part2_data/replies_*.json')\n",
+    "\n",
+    "    for filepath in files:\n",
+    "        with open(filepath, 'r') as f:\n",
+    "            data = json.load(f)\n",
+    "\n",
+    "        ## Pull senator metadata.\n",
+    "        senator = data['meta']\n",
+    "        s_handle = senator['handle']\n",
+    "        s_gender = senator.get('gender')\n",
+    "\n",
+    "        for post in data['posts']:\n",
+    "            post_uri = post['uri']\n",
+    "            total_reply_count = post.get('totalReplyCount', 0)\n",
+    "            \n",
+    "            ## Begin iterating through replies.\n",
+    "            for reply in post['replies']:\n",
+    "                display_name = reply.get('displayName', '') or \"\"\n",
+    "\n",
+    "                ## Infer gender.\n",
+    "                try:\n",
+    "                    inferred_gender, _ = infer_gender(display_name)\n",
+    "                except Exception:\n",
+    "                    inferred_gender = 'Unknown'\n",
+    "\n",
+    "                ## Parse timestamp for II.4.\n",
+    "                created_str = reply.get('createdAt')\n",
+    "                ts = datetime.fromisoformat(created_str.replace('Z', '+00:00'))\n",
+    "\n",
+    "                all_replies.append({\n",
+    "                    'senator_handle': s_handle,\n",
+    "                    'senator_gender': s_gender,\n",
+    "                    'post_uri': post_uri,\n",
+    "                    'post_total_replies': total_reply_count,\n",
+    "                    'reply_text_len': len(reply.get('text', '')),\n",
+    "                    'reply_timestamp': ts,\n",
+    "                    'replier_gender': inferred_gender\n",
+    "                })\n",
+    "    \n",
+    "    df = pd.DataFrame(all_replies)\n",
+    "    return(df)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "939a59f6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Execution Code\n",
+    "df_replies = process_gender_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 52,
+   "id": "77001534",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "          senator_handle senator_gender  \\\n",
+      "0  alsobrooks.senate.gov              F   \n",
+      "1  alsobrooks.senate.gov              F   \n",
+      "2  alsobrooks.senate.gov              F   \n",
+      "3  alsobrooks.senate.gov              F   \n",
+      "4  alsobrooks.senate.gov              F   \n",
+      "\n",
+      "                                            post_uri  post_total_replies  \\\n",
+      "0  at://did:plc:6srmlf7guiy534fkxhfmlubf/app.bsky...                   5   \n",
+      "1  at://did:plc:6srmlf7guiy534fkxhfmlubf/app.bsky...                   5   \n",
+      "2  at://did:plc:6srmlf7guiy534fkxhfmlubf/app.bsky...                   5   \n",
+      "3  at://did:plc:6srmlf7guiy534fkxhfmlubf/app.bsky...                   5   \n",
+      "4  at://did:plc:6srmlf7guiy534fkxhfmlubf/app.bsky...                   5   \n",
+      "\n",
+      "   reply_text_len                  reply_timestamp replier_gender  \n",
+      "0              46 2026-02-06 19:32:02.414000+00:00         Female  \n",
+      "1              55 2026-02-07 00:35:25.192000+00:00        Unknown  \n",
+      "2             155 2026-02-06 19:39:32.201000+00:00        Unknown  \n",
+      "3             221 2026-02-06 20:22:55.256000+00:00           Male  \n",
+      "4               0 2026-02-06 21:02:52.475000+00:00        Unknown  \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Validation Code\n",
+    "print(df_replies.head())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "id": "637a7e84",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total Replies: 15151\n",
+      "Classifiable:  5209\n",
+      "Fraction:      0.3438\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Report Classifiable Fraction\n",
+    "\n",
+    "counts = df_replies['replier_gender'].value_counts()\n",
+    "total = len(df_replies)\n",
+    "classifiable = counts.get('Male', 0) + counts.get('Female', 0)\n",
+    "\n",
+    "print(f\"Total Replies: {total}\")\n",
+    "print(f\"Classifiable:  {classifiable}\")\n",
+    "print(f\"Fraction:      {classifiable/total:.4f}\")"
    ]
   }
  ],
