Minor updates to II.4.

--- a/Assignment 2/part2.ipynb
+++ b/Assignment 2/part2.ipynb
@@ -856,7 +856,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "23a4f2f4",
    "metadata": {},
    "outputs": [
@@ -877,7 +877,7 @@
     "\n",
     "diff = late_m_fem - early_m_fem\n",
     "\n",
-    "print(f\"Cross-Gender Analysis (Male Senators):\")\n",
+    "print(\"Cross-Gender Analysis (Male Senators)\")\n",
     "print(f\"  Early Female Repliers: {early_m_fem:.2%}\")\n",
     "print(f\"  Late Female Repliers:  {late_m_fem:.2%}\")\n",
     "print(f\"  Change: {diff*100:+.2f} points\")"
