--- a/Assignment 2/part2.ipynb
+++ b/Assignment 2/part2.ipynb
@@ -11,7 +11,7 @@
     "  <br><br>\n",
     "  <strong>Primary:</strong> Brandon Tran (bat53)\n",
     "  <br>\n",
-    "  <strong>Partner:</strong> Cailey Bobadilla (Yale NetID)\n",
+    "  <strong>Partner:</strong> Cailey Bobadilla (cjb239)\n",
     "</div>\n",
     "\n",
     "---"
