latex conversion of rec table

--- a/Assignment 2/part1.ipynb
+++ b/Assignment 2/part1.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "#### AI Acknowledgement\n",
     "\n",
-    "I used Gemini 3 Pro to develop this Jupyter notebook. For parts I.1 and I.2, I used the LLM to accelerate the implementation of my own logic and to verify my understanding of the recommendation system algorithm. For part I.3, I used the LLM to help apply hierarchical clustering for ordering the senators and create the heatmaps for the follow and post Jaccard similarities."
+    "I used Gemini 3 Pro to develop this Jupyter notebook. For parts I.1 and I.2, I used the LLM to accelerate the implementation of my own logic and to verify my understanding of the recommendation system algorithm. For part I.3, I used the LLM to help apply hierarchical clustering for ordering the senators and create the heatmaps for the follow and post Jaccard similarities. Overall, the LLM also generated code that converts the dataframes to LaTeX. "
    ]
   },
   {
@@ -240,18 +240,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "166771db",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\u001b[31mERROR: Could not find a version that satisfies the requirement json (from versions: none)\u001b[0m\u001b[31m\n",
+      "\u001b[0m\u001b[31mERROR: No matching distribution found for json\u001b[0m\u001b[31m\n",
+      "\u001b[0mNote: you may need to restart the kernel to use updated packages.\n",
+      "Requirement already satisfied: pandas in /Users/caileybobadilla/Documents/Yale/Spring 2026/S&DS 5350/5350-Social-Algs/socialalgs.venv/lib/python3.13/site-packages (3.0.0)\n",
+      "Requirement already satisfied: numpy>=1.26.0 in /Users/caileybobadilla/Documents/Yale/Spring 2026/S&DS 5350/5350-Social-Algs/socialalgs.venv/lib/python3.13/site-packages (from pandas) (2.4.2)\n",
+      "^C\n",
+      "Note: you may need to restart the kernel to use updated packages.\n",
+      "Collecting Jinja2\n",
+      "  Downloading jinja2-3.1.6-py3-none-any.whl.metadata (2.9 kB)\n",
+      "Collecting MarkupSafe>=2.0 (from Jinja2)\n",
+      "  Downloading markupsafe-3.0.3-cp313-cp313-macosx_11_0_arm64.whl.metadata (2.7 kB)\n",
+      "Downloading jinja2-3.1.6-py3-none-any.whl (134 kB)\n",
+      "Downloading markupsafe-3.0.3-cp313-cp313-macosx_11_0_arm64.whl (12 kB)\n",
+      "Installing collected packages: MarkupSafe, Jinja2\n",
+      "\u001b[2K   \u001b[90m━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━\u001b[0m \u001b[32m2/2\u001b[0m [Jinja2]\n",
+      "\u001b[1A\u001b[2KSuccessfully installed Jinja2-3.1.6 MarkupSafe-3.0.3\n",
+      "Note: you may need to restart the kernel to use updated packages.\n"
+     ]
+    }
+   ],
    "source": [
     "%pip install json\n",
-    "%pip install pandas"
+    "%pip install pandas\n",
+    "%pip install Jinja2"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "73d8a032",
    "metadata": {},
    "outputs": [],
@@ -263,7 +288,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "d74382ec",
    "metadata": {},
    "outputs": [],
@@ -317,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 14,
    "id": "d9542af3",
    "metadata": {},
    "outputs": [],
@@ -955,6 +980,77 @@
     "      f'{followed_by_all_str if followed_by_all_str else 'None'}')\n",
     "print(f'Senators followed by no one: ' +\n",
     "      f'{followed_by_zero_str if followed_by_zero_str else 'None'}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "e0c0bef0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "\\begin{table}\n",
+      "\\caption{Top 3 Recommendations for Each Senator}\n",
+      "\\label{tab:recs}\n",
+      "\\begin{tabular}{llll}\n",
+      "\\toprule\n",
+      "Senator & Recommendation 1 & Recommendation 2 & Recommendation 3 \\\\\n",
+      "\\midrule\n",
+      "Tammy Baldwin & John Fetterman (27) & Dick Durbin (13) & Jack Reed (12) \\\\\n",
+      "Patty Murray & Dick Durbin (13) & Jack Reed (11) & Mazie Hirono (11) \\\\\n",
+      "Maria Cantwell & Chuck Schumer (22) & Chris Murphy (16) & Amy Klobuchar (15) \\\\\n",
+      "Mark Warner & Patty Murray (18) & Martin Heinrich (18) & Cory Booker (18) \\\\\n",
+      "Tim Kaine & Mazie Hirono (13) & Jeff Merkley (5) & Maggie Hassan (4) \\\\\n",
+      "Bernie Sanders & Follows zero senators &  &  \\\\\n",
+      "Sheldon Whitehouse & Elissa Slotkin (17) & Jeff Merkley (5) & Maggie Hassan (4) \\\\\n",
+      "Jack Reed & Andy Kim (15) & Elissa Slotkin (14) & Dick Durbin (13) \\\\\n",
+      "John Fetterman & Follows zero senators &  &  \\\\\n",
+      "Ron Wyden & Elissa Slotkin (15) & Mazie Hirono (11) & Chris Coons (11) \\\\\n",
+      "Jeff Merkley & Follows zero senators &  &  \\\\\n",
+      "Chuck Schumer & Jeff Merkley (5) & Jon Ossoff (1) &  \\\\\n",
+      "Kirsten Gillibrand & Follows zero senators &  &  \\\\\n",
+      "Ben Ray Lujan & Maria Cantwell (11) & Tim Kaine (11) & Chuck Schumer (11) \\\\\n",
+      "Martin Heinrich & Mark Warner (25) & Bernie Sanders (19) & Lisa Blunt Rochester (17) \\\\\n",
+      "Andy Kim & Jeanne Shaheen (19) & Raphael Warnock (15) & Dick Durbin (11) \\\\\n",
+      "Cory Booker & Raphael Warnock (16) & Elissa Slotkin (13) & Dick Durbin (12) \\\\\n",
+      "Jeanne Shaheen & Angela Alsobrooks (7) & Jeff Merkley (5) & Mark Kelly (2) \\\\\n",
+      "Maggie Hassan & Follows zero senators &  &  \\\\\n",
+      "Tina Smith & Lisa Blunt Rochester (19) & Dick Durbin (13) & Angela Alsobrooks (7) \\\\\n",
+      "Amy Klobuchar & Andy Kim (16) & Elissa Slotkin (16) & Maggie Hassan (4) \\\\\n",
+      "Elissa Slotkin & Amy Klobuchar (17) & Tammy Duckworth (17) & Jack Reed (11) \\\\\n",
+      "Gary Peters & Bernie Sanders (15) & Amy Klobuchar (15) & Tammy Duckworth (14) \\\\\n",
+      "Elizabeth Warren & Bernie Sanders (15) & Amy Klobuchar (15) & Tammy Duckworth (14) \\\\\n",
+      "Ed Markey & Andy Kim (15) & Dick Durbin (13) & Jack Reed (11) \\\\\n",
+      "Chris Van Hollen & Tim Kaine (14) & Elizabeth Warren (14) & Amy Klobuchar (13) \\\\\n",
+      "Angela Alsobrooks & Raphael Warnock (16) & Dick Durbin (12) & Jack Reed (11) \\\\\n",
+      "Dick Durbin & Andy Kim (15) & Jack Reed (11) & Mazie Hirono (10) \\\\\n",
+      "Tammy Duckworth & Jack Reed (11) & Mazie Hirono (11) & Chris Coons (10) \\\\\n",
+      "Brian Schatz & Tim Kaine (11) & Elizabeth Warren (11) & Chris Van Hollen (11) \\\\\n",
+      "Mazie Hirono & Tammy Baldwin (16) & Jeanne Shaheen (15) & Adam Schiff (15) \\\\\n",
+      "Raphael Warnock & Chris Coons (11) & Jeff Merkley (5) & Mark Kelly (2) \\\\\n",
+      "Jon Ossoff & Patty Murray (1) & Mark Warner (1) & Sheldon Whitehouse (1) \\\\\n",
+      "Chris Coons & John Fetterman (18) & Tammy Baldwin (16) & Tammy Duckworth (15) \\\\\n",
+      "Lisa Blunt Rochester & John Fetterman (18) & Tammy Baldwin (16) & Jeanne Shaheen (15) \\\\\n",
+      "Chris Murphy & Follows zero senators &  &  \\\\\n",
+      "Richard Blumenthal & Andy Kim (15) & Elissa Slotkin (14) & Jack Reed (12) \\\\\n",
+      "Michael Bennet & Bernie Sanders (18) & Andy Kim (14) & Elissa Slotkin (14) \\\\\n",
+      "Adam Schiff & Ed Markey (17) & Brian Schatz (17) & Michael Bennet (16) \\\\\n",
+      "Alex Padilla & Tammy Baldwin (13) & Jeanne Shaheen (12) & Adam Schiff (12) \\\\\n",
+      "Mark Kelly & Follows zero senators &  &  \\\\\n",
+      "Ruben Gallego & Tammy Baldwin (14) & Jeanne Shaheen (13) & Adam Schiff (13) \\\\\n",
+      "\\bottomrule\n",
+      "\\end{tabular}\n",
+      "\\end{table}\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Generate the exact LaTeX code for the table\n",
+    "print(df_recs.to_latex(index=False, caption=\"Top 3 Recommendations for Each Senator\", label=\"tab:recs\"))"
    ]
   },
   {
