update to ai acknowledgment

--- a/Assignment 2/part1.ipynb
+++ b/Assignment 2/part1.ipynb
@@ -34,7 +34,7 @@
    "source": [
     "#### AI Acknowledgement\n",
     "\n",
-    "I used Gemini 3 Pro to develop this Jupyter notebook. For parts I.1 and I.2, I used the LLM to accelerate the implementation of my own logic and to verify my understanding of the recommendation system algorithm. For part I.3, I used the LLM to help apply hierarchical clustering for ordering the senators and create the heatmaps for the follow and post Jaccard similarities. Overall, the LLM also generated code that converts the dataframes to LaTeX. "
+    "I used Gemini 3 Pro to develop this Jupyter notebook. For parts I.1 and I.2, I used the LLM to accelerate the implementation of my own logic and to verify my understanding of the recommendation system algorithm. The LLM also generated code that converted the Top 3 Recommendations dataframe/table to LaTeX. For part I.3, I used the LLM to help apply hierarchical clustering for ordering the senators and create the heatmaps for the follow and post Jaccard similarities."
    ]
   },
   {
