added group numbers to notebooks

--- a/Assignment 2/part2.ipynb
+++ b/Assignment 2/part2.ipynb
@@ -12,6 +12,8 @@
     "  <strong>Primary:</strong> Brandon Tran (bat53)\n",
     "  <br>\n",
     "  <strong>Partner:</strong> Cailey Bobadilla (cjb239)\n",
+    "  <br>\n",
+    "  <strong>Group:</strong> 9\n",
     "</div>\n",
     "\n",
     "---"
